syntax = "proto3";

package com.hugo.demo.dateItemPrice;

option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

message DateItemPriceEntity {
  string metal_id = 1;
  double open = 2;
  double close = 3;
  double high = 4;
  double low = 5;
  string date = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}


